feat: :sparkles: Implementa as operações de criação, leitura e atualização de equipamentos no sistema, permitindo aos usuários gerenciar as informações dos equipamentos de forma completa e integrada.
Esta alteração implementa as operações de criação, leitura e atualização de equipamentos no sistema. Além disso, foi criado um serviço para gerenciar essas operações de forma eficiente e organizada.  O serviço de equipamentos é responsável por encapsular a lógica de negócio relacionada aos equipamentos. Ele centraliza as operações, garantindo a consistência e a integridade dos dados. Além disso, o serviço é responsável por validar os dados de entrada, garantindo que apenas informações válidas sejam inseridas ou atualizadas no sistema.  A criação desse serviço segue as melhores práticas de desenvolvimento, utilizando padrões de projeto e boas práticas de programação. Isso garante um código mais limpo, modular e fácil de dar manutenção.  Com a adição dessa feature e do serviço associado, os usuários terão uma maneira simples e eficaz de gerenciar os equipamentos no sistema, melhorando a experiência de uso e aumentando a produtividade.
